--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -7,14 +7,14 @@ $color-DoveGray: rgb(102, 102, 102);
 $color-GodGray: #1e1e1e;
 $color-Eucalyptus: rgb(33, 154, 81);
 $color-Tundora : rgb(68, 68, 68);
-
-
+$color-MineShaft : rgb(43, 43, 43);
+$color-Seashell : rgb(241, 241, 241);
+$color-Black : rgb(0, 0, 0);
+$color-Silver : rgb(193, 193, 193);
 
 $font-main: 'Open Sans', sans-serif;
 $font-secondary: 'Roboto', sans-serif;
 
-$font-size: 1.2;
-//$font-size--h1 : ;
 $font-size--regular: 14px;
 
 $screen-xs: 0;
