--- a/src/style/partials/menu.scss
+++ b/src/style/partials/menu.scss
@@ -6,6 +6,9 @@
 
     &__item {
         display: inline-block;
+        flex-flow: row wrap;
+        justify-content: left;
+        align-items: normal;
         list-style: none;
     }
 
@@ -22,5 +25,4 @@
             transition: all .6s ease;
         }
     }
-
 }
