--- a/src/style/partials/user.scss
+++ b/src/style/partials/user.scss
@@ -64,13 +64,12 @@
             background-color: transparent;
             cursor: pointer;
         }
-
     }
 
-}
+    &:hover .user-drop__wrap {
+        visibility: visible;
+        opacity: 1;
+        z-index: 1;
+    }
 
-.user-drop:hover .user-drop__wrap {
-    visibility: visible;
-    opacity: 1;
-    z-index: 1;
 }
