--- a/src/style/partials/elements.scss
+++ b/src/style/partials/elements.scss
@@ -98,17 +98,17 @@
     height: 40px;
     width: 260px;
     border: 1px solid rgb(198, 198, 198);
-    transition: padding .4s; /*for animation*/
     @include font($font-secondary, $font-size--regular, $color-secondary);
 
     &:focus {
-        border: 1px solid rgb(198, 198, 198);
-        box-shadow: 0 1px 0 0 rgb(198, 198, 198);
+        border: 1px solid $color-Eucalyptus;
         outline: none;
     }
 
     &__icon {
-        background: transparent url(../img/input_icon.png) no-repeat 92% center;
+        background: transparent no-repeat 92%;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966'%3E%3Cpath fill='%23c6c6c6' d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3E%3C/svg%3E");
+        background-size: 26px 26px;
     }
 }
 
@@ -140,8 +140,7 @@
             border-right: none;
             outline: none;
         }
-
-        }
+    }
 
     &__btn {
         width: 135px;
@@ -194,13 +193,15 @@
     &__input:checked + &__label:after {
         content: "";
         position: absolute;
-        width: 2px;
-        height: 2px;
         left: 2px;
-        top: 4px;
-        background: $color-Eucalyptus;
-        box-shadow: 2px 0 0 $color-Eucalyptus, 4px 0 0 $color-Eucalyptus, 4px -2px 0 $color-Eucalyptus, 4px -4px 0 $color-Eucalyptus, 4px -6px 0 $color-Eucalyptus, 4px -8px 0 $color-Eucalyptus;
-        transform: rotate(45deg);
+        top: 3px;
+        width: 7px;
+        height: 3px;
+        border-bottom: 2px solid $color-Eucalyptus;
+        border-left: 2px solid $color-Eucalyptus;
+        -webkit-transform: rotate(-50deg);
+        transform: rotate(-50deg);
+        color: $color-Eucalyptus;
     }
 
 }
