--- a/src/style/partials/nav.scss
+++ b/src/style/partials/nav.scss
@@ -42,11 +42,11 @@
                 content: '';
                 display: inline-block;
                 position: relative;
-                top: -2px;
+                top: -1px;
                 left: -10px;
                 height: 8px;
-                width: 6px;
-                background-image: url(../img/nav-drop__list-icon.png);
+                width: 8px;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 492.004 492.004'%3E%3Cpath fill='%23ffffff' d='M382.678 226.804L163.73 7.86C158.666 2.792 151.906 0 144.698 0s-13.968 2.792-19.032 7.86l-16.124 16.12c-10.492 10.504-10.492 27.576 0 38.064L293.398 245.9l-184.06 184.06c-5.064 5.068-7.86 11.824-7.86 19.028 0 7.212 2.796 13.968 7.86 19.04l16.124 16.116c5.068 5.068 11.824 7.86 19.032 7.86s13.968-2.792 19.032-7.86L382.678 265c5.076-5.084 7.864-11.872 7.848-19.088.016-7.244-2.772-14.028-7.848-19.108z'/%3E%3C/svg%3E");
                 background-repeat: no-repeat;
             }
         }
@@ -110,16 +110,16 @@
             margin: 5px 0 0 10px;
             list-style: none;
 
-            &::before{
+            &::before {
                 content: '';
                 display: inline-block;
                 position: relative;
-                top: -2px;
+                top: -1px;
                 left: -10px;
                 height: 8px;
-                width: 6px;
-                background-image: url(../img/nav-drop__list-icon.png);
-                background-repeat: no-repeat;
+                width: 8px;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 492.004 492.004'%3E%3Cpath fill='%23bebebe' d='M382.678 226.804L163.73 7.86C158.666 2.792 151.906 0 144.698 0s-13.968 2.792-19.032 7.86l-16.124 16.12c-10.492 10.504-10.492 27.576 0 38.064L293.398 245.9l-184.06 184.06c-5.064 5.068-7.86 11.824-7.86 19.028 0 7.212 2.796 13.968 7.86 19.04l16.124 16.116c5.068 5.068 11.824 7.86 19.032 7.86s13.968-2.792 19.032-7.86L382.678 265c5.076-5.084 7.864-11.872 7.848-19.088.016-7.244-2.772-14.028-7.848-19.108z'/%3E%3C/svg%3E");
+
             }
         }
 
@@ -128,7 +128,6 @@
             @include font($font-main, $font-size--regular, $color-MineShaft);
             text-decoration: none;
             background-color: transparent;
-            //word-break: break-all;
 
             &:hover {
                 color: $color-Eucalyptus;
