--- a/src/style/partials/card.scss
+++ b/src/style/partials/card.scss
@@ -12,7 +12,7 @@
     }
 
     &:hover {
-        border-bottom: transparent;
+        border-bottom-color: transparent;
     }
 
     &__inner {
@@ -21,16 +21,6 @@
         align-items: stretch;
         height: 100%;
         text-decoration: none;
-
-        //&-top {
-        //    flex-grow: 1;
-        //    font-size: 0;
-        //}
-
-        //&-bottom {
-        //    //order: 1;
-        //    font-size: 0;
-        //}
     }
 
     &__img {
@@ -50,10 +40,12 @@
     }
 
     &__rating {
+        margin-top: 30px;
 
     }
 
     &__price {
+        margin-top: 30px;
         line-height: 1.2;
         font-weight: 600;
         @include font($font-main, 36px, rgb(13, 13, 13));
@@ -122,5 +114,4 @@
             background-color: #f29958;
         }
     }
-
 }
