--- a/src/style/partials/common.scss
+++ b/src/style/partials/common.scss
@@ -8,12 +8,6 @@
 ::selection {background: rgba(33, 154, 81, 0.5);}
 ::-moz-selection {background: rgba(33, 154, 81, 0.5);}
 
-//*:focus {
-//    outline: none;
-//    outline-offset: 0;
-//    box-shadow: 0 0 2px 2px rgb(102, 102, 102);
-//}
-
 .wrapper {
     width: 100%;
     overflow: hidden;
@@ -21,16 +15,9 @@
 }
 
 .center {
-    margin: 0 5%;
-
-    @media screen and (min-width: 1239px) {
-        margin: 0 auto;
-    }
-}
-
-.inner {
-    max-width: 1240px;
-
+    width: 1260px;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 
 .mt10 {
