--- a/src/style/partials/contact.scss
+++ b/src/style/partials/contact.scss
@@ -8,14 +8,20 @@
         align-items: center;
     }
 
-    &__inner{
+    &__inner {
+        margin-top: 20px;
         padding: 0 10px;
-        display: inline-flex;
+        display: flex;
         flex-flow: column wrap;
         position: relative;
+
+        &--pl40 {
+            padding-left: 40px;
+        }
     }
 
     &__text {
+
         @include font($font-main, 12px, $color-GodGray);
 
         &--bold16 {
@@ -41,7 +47,6 @@
             height: 20px;
             width: 17px;
             fill: rgba(255, 255, 255, 0.4);
-
         }
     }
 
@@ -49,14 +54,11 @@
         -o-object-fit: scale-down;
         object-fit: scale-down;
     }
+}
 
-    &--pl40 {
-        padding-left: 40px;
-    }
+.contact-footer {
 
-    &__list {
-        flex: 0 0 60%;
-    }
+    flex: 0 0 60%;
 
     &__item {
         position: relative;
@@ -75,6 +77,13 @@
         }
     }
 
+    &__iconWrap {
+        position: absolute;
+        left: 0;
+        top: 5px;
+        height: 20px;
+        width: 17px;
+        fill: rgba(255, 255, 255, 0.4);
 
-
+    }
 }
