--- a/src/style/partials/payment.scss
+++ b/src/style/partials/payment.scss
@@ -1,10 +1,10 @@
 .payment {
+    margin-top: 20px;
 
     &__list {
         display: inline-block;
         list-style: none;
         font-size: 0;
-
     }
 
     &__link {
