--- a/src/style/partials/slider.scss
+++ b/src/style/partials/slider.scss
@@ -18,7 +18,6 @@
         background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0));
         transition: all .6s ease;
     }
-
 }
 
 .slick-next {
@@ -107,6 +106,7 @@
 .slider {
 
     width: 100%;
+    min-width: 1260px;
 
     &__wrap {
 
@@ -120,7 +120,6 @@
         font-size: 0;
         text-decoration: none;
         overflow: hidden;
-        cursor: pointer;
     }
 
     &__inner {
@@ -182,5 +181,4 @@
             background-size: auto 0.15em;
         }
     }
-
 }
