--- a/src/style/partials/subscribe.scss
+++ b/src/style/partials/subscribe.scss
@@ -3,6 +3,7 @@
     border: 3px solid rgb(55, 55, 55);
     display: flex;
     flex-flow: row nowrap;
+    margin-top: 30px;
     padding: 25px 20px 10px;
 
     &__text {
