--- a/src/style/partials/nav.scss
+++ b/src/style/partials/nav.scss
@@ -156,6 +156,12 @@
     visibility: visible;
     opacity: 1;
     z-index: 1002;
+
+    @media screen and (max-width: $screen-md) {
+        visibility: hidden;
+        opacity: 0;
+        z-index: 0;
+    }
 }
 
 
