--- a/src/style/partials/rating.scss
+++ b/src/style/partials/rating.scss
@@ -10,7 +10,7 @@ $rating-fill-hov: #facd46;
         height: 15px;
         margin: 0 10px 0 0;
 
-        &:last-child {
+        &--last-child {
             margin-right: 0;
         }
 
