--- a/src/style/partials/nav-menu.scss
+++ b/src/style/partials/nav-menu.scss
@@ -1,5 +1,6 @@
 .nav-menu {
     width: 100%;
+    min-width: 1260px;
     position: relative;
     border-top: 1px solid rgb(241, 241, 241);
     border-bottom: 1px solid rgb(241, 241, 241);
