--- a/src/style/partials/nav-product.scss
+++ b/src/style/partials/nav-product.scss
@@ -1,5 +1,6 @@
 .nav-product {
     width: 100%;
+    min-width: 1260px;
     padding: 0;
     margin: 0;
     border-top: 1px solid rgb(241, 241, 241);
