--- a/src/style/partials/common.scss
+++ b/src/style/partials/common.scss
@@ -11,7 +11,7 @@
 .wrapper {
     width: 100%;
     min-width: 1260px;
-    overflow: visible;
+    overflow: scroll;
     background: $color-primary;
 }
 
