--- a/src/style/partials/elements.scss
+++ b/src/style/partials/elements.scss
@@ -83,24 +83,67 @@
     }
 }
 
-.input {
-    display: inline-block;
-    padding: 0 50px 0 15px;
-    height: 40px;
+.search-group {
+    // display: flex;
+    // flex-flow: row nowrap;
     width: 260px;
-    border: 1px solid rgb(198, 198, 198);
+    height: 40px;
+    // border: 1px solid rgb(198, 198, 198);
     @include font($font-secondary, $font-size--regular, $color-secondary);
     transition: all 1s ease;
+    position: relative;
 
-    &:focus {
-        border: 1px solid $color-Eucalyptus;
-        outline: none;
+    // &:focus {
+    //     border: 1px solid $color-Eucalyptus;
+    //     outline: none;
+    //     transition: all 1s ease;
+    // }
+
+    // &:hover {
+    //     border: 1px solid $color-Eucalyptus;
+    //     outline: none;
+    //     transition: all 1s ease;
+    // }
+
+    &__input {
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;
+        padding: 0 50px 0 15px;
+        border: 1px solid rgb(198, 198, 198);
+        @include font($font-secondary, $font-size--regular, $color-secondary);
+        transition: all 1s ease;
+
+        &:focus {
+            border: 1px solid $color-Eucalyptus;
+            outline: none;
+            transition: all 1s ease;
+        }
+
+        &:hover {
+            border: 1px solid $color-Eucalyptus;
+            outline: none;
+            transition: all 1s ease;
+        }
+
     }
 
-    &__icon {
-        background: transparent no-repeat 92%;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966'%3E%3Cpath fill='%23c6c6c6' d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3E%3C/svg%3E");
+    &__btn {
+        position: absolute;
+        right: 0;
+        width: 50px;
+        height: 100%;
+        background-color: transparent;
+        cursor: pointer;
+        transition: .6s ease;
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966'%3E%3Cpath fill='%23c6c6c6' d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3E%3C/svg%3E") no-repeat center center;
         background-size: 26px 26px;
+
+        &:hover {
+            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966'%3E%3Cpath fill='%23219a51' d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3E%3C/svg%3E") no-repeat center center;
+            background-size: 26px 26px;
+            transition: .6s ease;
+        }
     }
 }
 
